Set working directory for send-mail.service

--- a/roles/ip-address/files/send-mail.service
+++ b/roles/ip-address/files/send-mail.service
@@ -4,6 +4,7 @@ After=network-online.target
 
 [Service]
 Type=oneshot
+WorkingDirectory=/root
 ExecStart=/root/send-mail.sh
 RemainAfterExit=true
 StandardOutput=journal
